--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
 		"mongodb": "^4.8.1",
-		"mongoose": "^6.5.1"
+		"mongoose": "^6.5.1",
+		"nodemon": "^2.0.19"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
