--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js"
+		"start": "nodemon index.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.20.0",
@@ -12,7 +12,8 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
 		"mongodb": "^4.8.1",
-		"mongoose": "^6.5.1"
+		"mongoose": "^6.5.1",
+		"nodemon": "^2.0.20"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
